src/test/deca/codegen/invalid/homemade/Factorial.ass
; ADDSP : method table size : 5, nb of var 1
	ADDSP #6
; start main program
; Generation of the method table of Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD Code.Object.equals, R0
	STORE R0, 2(GB)
; Generation of the method table of : Calc
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD Code.Object.equals, R0
	STORE R0, 4(GB)
	LOAD Code.Calc.factorial, R0
	STORE R0, 5(GB)
; Main program
; Global variables initialization
	NEW #1, R2
	BOV heapFull
	LEA 3(GB), R0
	STORE R0, 0(R2)
	PUSH R2
	BSR init.Calc
	POP R2
	STORE R2, 6(GB)
; Beginning of main instructions:
	LOAD 6(GB), R2
; Beginning of a method call : method at index 1 ; with 1 params.
	ADDSP #2
	STORE R2, 0(SP)
	LOAD #4, R2
	STORE R2, -1(SP)
	LOAD 0(SP), R2
	LOAD 0(R2), R2
	BSR 2(R2)
	SUBSP #2
	LOAD R0, R1
	WINT
	WNL
	LOAD 6(GB), R2
; Beginning of a method call : method at index 1 ; with 1 params.
	ADDSP #2
	STORE R2, 0(SP)
	LOAD #30, R2
	STORE R2, -1(SP)
	LOAD 0(SP), R2
	LOAD 0(R2), R2
	BSR 2(R2)
	SUBSP #2
	LOAD R0, R1
	WINT
	WNL
	LOAD 6(GB), R2
; Beginning of a method call : method at index 1 ; with 1 params.
	ADDSP #2
	STORE R2, 0(SP)
	LOAD #80000, R2
	STORE R2, -1(SP)
	LOAD 0(SP), R2
	LOAD 0(R2), R2
	BSR 2(R2)
	SUBSP #2
	LOAD R0, R1
	WINT
	WNL
	HALT
init.object:
	RTS
init.Calc:
; save registers
; initialization of own fields
; restore registers
	RTS
Code.Object.equals:
	LOAD -2(LB), R0
	LOAD -3(LB), R1
	CMP R0, R1
	SEQ R0
	RTS
code.Calc.factorial:
; save registers
	PUSH R3
	PUSH R2
; Beginning of a new If statement
; Beginning of a comparison in a control flow
	LOAD -3(LB), R2
	CMP #1, R2
	BNE Else0
	LOAD #1, R2
	LOAD R2, R0
	BRA fin.Calc.factorial
	BRA EndIf0
Else0:
	LOAD -3(LB), R2
	LOAD -2(LB), R3
; Beginning of a method call : method at index 1 ; with 1 params.
	ADDSP #2
	STORE R3, 0(SP)
	LOAD -3(LB), R3
	SUB #1, R3
	STORE R3, -1(SP)
	LOAD 0(SP), R3
	LOAD 0(R3), R3
	BSR 2(R3)
	SUBSP #2
	LOAD R0, R3
	MUL R3, R2
	LOAD R2, R0
	BRA fin.Calc.factorial
EndIf0:
	WSTR "ERROR : exited method Calc.factorial with non-void return type without a return instruction."
	WNL
	ERROR
fin.Calc.factorial:
; restore registers
	POP R2
	POP R3
	RTS
heapFull:
	WSTR "ERROR : allocation failed because of full heap"
	WNL
	ERROR
; end main program
